--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -12063,7 +12063,7 @@ text.  Markers always start with =fn:=.  For example:
 #+begin_example
 The Org website[fn:1] now looks a lot better than it used to.
 ...
-[fn:53] The link is: https://orgmode.org
+[fn:54] The link is: https://orgmode.org
 #+end_example
 
 Org mode extends the number-based syntax to /named/ footnotes and
@@ -14249,7 +14249,7 @@ general options (see [[*Export Settings]]).
   The strategy to handle multi-lingual features.  Possible values
   are ~nil~, ~fontspec~, ~polyglossia~ or ~babel~.
   See more details about setting up multi-language documents in the
-  [[*Handling different languages in LaTeX exports]] section.
+  [[*Handling different languages and character sets in LaTeX exports]] section.
 
 
 - =KEYWORDS= ::
@@ -14280,6 +14280,7 @@ The following sections have further details.
 
 *** LaTeX header and sectioning structure
 :PROPERTIES:
+:CUSTOM_ID: latex-headers
 :DESCRIPTION: Setting up the export file structure.
 :ALT_TITLE: LaTeX header and sectioning
 :END:
@@ -14292,7 +14293,7 @@ The following sections have further details.
 The LaTeX export backend converts the first three of Org's outline
 levels into LaTeX headlines.  The remaining Org levels are exported as
 lists.  To change this globally for the cut-off point between levels
-and lists, (see [[*Export Settings]]).
+and lists, see [[*Export Settings]].
 
 By default, the LaTeX export backend uses the /article/ class.
 
@@ -14343,53 +14344,103 @@ A sample Org file with the above headers:
   some more text
 #+end_example
 
-*** Handling different languages in LaTeX exports
-
+*** Handling different languages and character sets in LaTeX exports
+:properties:
+#+LABEL: LaTeX languages and character sets
+:end:
 #+cindex: @samp{LANGUAGE} keyword, @samp{LATEX_MULTI_LANG} keyword
 #+vindex: org-export-multi-lang
 #+vindex: org-export-default-language
 
-  LaTeX was initially developed to handle documents written primally
-  in English. As long as you don't need localisation, you can use it
-  as-is with any language that uses the Latin character set.  As a
-  general rule, most LaTeX classes include standard font settings that
-  work well in this situation.  Languages using non-Latin character
-  sets will need font configuration, which will vary depending on the
-  LaTeX compiler and multi-language support package you use.
+  LaTeX was initially developed to handle documents written primarily
+  in (American) English.  The standard LaTeX document classes assume
+  this and provide a default font configuration to deliver a default
+  appearance to the output.
+  Spelling out dates, section headers for the table of contents,
+  etc. as well as captions for figures, tables, listings, etc. are
+  defined in this context.  As long as you don't need localisation
+  (i.e. adapting or translating these to the document's intended
+  linguistic environment), you can use most LaTeX document classes
+  as-is with any document that uses the Latin character set.
+  # LaTeX
+  # document classes include standard font settings that work well in
+  # this situation.
+  Documents using non-Latin character sets will need
+  font configuration[fn:49], which will vary depending on the document
+  class, the LaTeX compiler and multi-language support package you
+  use.
 
-  Non-English and multi-language documents use the LaTeX packages
-  =babel= or =polyglossia=  to localise document features like the
-  table of contents, dates, hyphenation, etc.
+  To fine-tune the document's appearance provided by the LaTeX
+  document class you use, you may need to change the font
+  configuration. How this is done depends on the LaTeX compiler you
+  use.
 
-  By default, LaTeX only loads the fonts appropriate for Latin
-  characters. Non-Latin characters in the document are often not
-  rendered correctly without loading a custom font. =pdflatex= relies
-  on LaTeX packages you need to include using the =#+LATEX_HEADER:=
-  keyword.  =lualatex= and =xelatex= handle custom fonts using either
-  =fontspec=, =polyglossia= or =babel= as described below. We
-  recommend selecting Unicode fonts that cover the character sets of
-  in the languages used in your document.
+  In the case of =pdflatex=, this is achieved by including font
+  packages (cf. [[#pdflatex-fonts]]).
+
+  Modern, UTF-8 enabled LaTeX compilers (i.e. =lualatex= and
+  =xelatex=) handle font configuration using the package
+  =fontspec=. We recommend to choose Unicode fonts that include the
+  non-Latin character sets you use to simplify the configuration
+  (cf. [[#nonpdflatex-fonts]]).
+
+  For documents that a written for outside an American English
+  linguistic context and for multilingual documents, LaTeX provides the
+  packages =babel= or =polyglossia= to localise document features like
+  the table of contents, dates, hyphenation, etc.
+
+  # When you don't add extra configuration, Org mode will use LaTeX defaults,
+  # i.e. American English with Latin fonts.
+
+  # By default, LaTeX only loads the fonts appropriate for Latin
+  # characters. Non-Latin characters in the document are often not
+  # rendered correctly without loading a custom font. =pdflatex= relies
+  # on LaTeX packages you need to include using the =#+LATEX_HEADER:=
+  # keyword.  =lualatex= and =xelatex= handle custom fonts using either
+  # =fontspec=, =polyglossia= or =babel= as described below. We
+  # recommend selecting Unicode fonts that cover the character sets of
+  # in the languages used in your document.
 
   The languages used in a document are specified using =LANGUAGE=
   keyword. Use the =LATEX_MULTI_LANG= keyword to set the way
   to handle localisation and font configuration.
 
   =LATEX_MULTI_LANG= is ~nil~ by default to handle localisation
-  manually as described at the end of this section.
+  manually.  In this case you need to configure LaTeX language
+  features manually in LaTeX headers (see ~#+LATEX_HEADER~ keyword).
+  For convenience, if the LaTeX headers load =babel= or =polyglossia=,
+  you may use =AUTO= in the package options to refer to the document's
+  main language. Org's will translate it according to the value of the
+  =#+LANGUAGE= keyword. Use this setting when you must use =pdflatex=
+  and follow the instructions in [[#pdflatex-fonts]] to set up fonts
+  in your document.
+
+  #+BEGIN_EXAMPLE
+#+LANGUAGE: es
+#+LATEX_HEADER: \usepackage[AUTO]{babel}
+  #+END_EXAMPLE
+  #+texinfo: @noindent
+  would tell LaTeX to use the ~babel~ package to create a document
+  with Spanish headers. The =LATEX_HEADER= would be translated to
+  #+BEGIN_EXAMPLE
+\usepackage[spanish]{babel}
+  #+END_EXAMPLE
+  #+texinfo:@noindent
+  Multiple languages are also handled.
 
   When =#+LATEX_MULTI_LANG= is set to ~fontspec~, Org mode will
-  configure the document's fonts using LaTeX's ~fontspec~ package.
-  Note that ~fontspec~ does not support document localisation. It
+  configure the document's fonts using LaTeX's ~fontspec~ package.  It
   configures the fonts used in the document. It distinguishes between
-  the main, sans and monotype fonts, and can provide fallbacks for
-  character sets (for example, ~emoji~, ~han~, ~kana~, etc.) not
-  supported by the default fonts.  See [[#lualatex-fontspec]] for more
-  details.  Beware that ~fontspec~ does not work with =pdflatex=
-  compiler.  We recommend using =lualatex= or =xelatex= for reliable
-  non-Latin language support.
+  the Roman (=main=), Sans-serfi (=sans=) and monotype (=mono=) fonts,
+  and can provide fallbacks for character sets (for example, ~emoji~,
+  ~han~, ~kana~, etc.) not supported by the default fonts.  See
+  [[#lualatex-fontspec]] for more details.
+  Note that ~fontspec~ is not intended for document localisation and
+  that it does not work with =pdflatex= compiler.  We recommend using
+  =lualatex= or =xelatex= for reliable non-Latin language support.
 
-  When =#+LATEX_MULTI_LANG= is either ~babel~ or ~polyglossia~, Org
-  mode will use the indicated LaTeX package to handle multi-language
+  When =#+LATEX_MULTI_LANG= is set to either ~babel~ or ~polyglossia~,
+  Org will use the indicated LaTeX package to handle multi-language
   support.  Either should be used for non-English documents.  Both
   provide setting up your font configuration globally for your
   document and on a per-language basis.  The =LANGUAGE= option will be
@@ -14405,44 +14456,14 @@ A sample Org file with the above headers:
   typesetting options) is French and there are passages in German and
   Spanish.
 
-  # If you use =polyglossia=, you can control the fonts used for
-  # different languages in the PDF output with the variable
-  # ~org-latex-polyglossia-font-config~.
-  # #+vindex: org-latex-polyglossia-font-config
-
-  # If you use =babel=, you can control the fonts used for different
-  # languages in the PDF output with the variable
-  # ~org-latex-babel-font-config~.
-
-  In general, when exporting to LaTeX or PDF, we recommend
-  using a Unicode font set that covers the scripts you use in your
-  document. This will simplify the font configuration.
-
   See [[#lualatex-polyglossia]] and [[#babel-fontconfig]] for more
   details about how to configure fonts using ~babel~ and
-  ~polyglossia~.  Note that ~polyglossia~ does not work with
-  =pdflatex= compiler.  We recommend using =lualatex= or =xelatex= for
-  reliable non-Latin language support.
+  ~polyglossia~.
 
-  When =LATEX_MULTI_LANG= is ~nil~, you need to configure LaTeX
-  language features manually in LaTeX headers (see ~#+LATEX_HEADER~
-  keyword).  For convenience, if the LaTeX headers load =babel= or
-  =polyglossia=, you may use =AUTO= in the package options to refer to
-  the document's main language. Org's will translate it according to
-  the value of the =#+LANGUAGE= keyword. Use this setting when you
-  must use =pdflatex= and follow the instructions in
-  [[#pdflatex-fonts]] to set up fonts in your document.
+  Note that ~polyglossia~ does not work with =pdflatex= compiler.  We
+  recommend using =lualatex= or =xelatex= for reliable non-Latin
+  language support.
 
-  #+BEGIN_EXAMPLE
-#+LANGUAGE: es
-#+LATEX_HEADER: \usepackage[AUTO]{babel}
-  #+END_EXAMPLE
-  #+texinfo: @noindent
-  would tell LaTeX to use the ~babel~ package to create a document
-  with Spanish headers. The =LATEX_HEADER= would be translated to
-  #+BEGIN_EXAMPLE
-\usepackage[spanish]{babel}
-  #+END_EXAMPLE
 
 *** Quoting LaTeX code
 :PROPERTIES:
@@ -15048,6 +15069,9 @@ include that.  Other commands need to be included manually:
 #+END_SRC
 
 *** Controlling the font configuration for LuaLaTeX and XeLaTeX
+:PROPERTIES:
+:custom_id: nonpdflatex-fonts
+:END:
 #+cindex: latex backend
 #+vindex: org-latex-multi-lang
 #+vindex: org-latex-classes
@@ -15081,7 +15105,7 @@ yourself with fonts and options, read the
 [[http://mirrors.ctan.org/macros/unicodetex/latex/fontspec/fontspec.pdf][~fontspec~
 package manual]] Part II.  This variable should be set in your Emacs
 initialisation code, in the file local variables or in the directory
-local variable file ~.dir-locals.el~[fn:49] .
+local variable file ~.dir-locals.el~[fn:50] .
 
 If you do not want or need any specific configuration for the
 ~fontspec~ package, make sure that ~org-latex-fontspec-config~ is set
@@ -15189,7 +15213,7 @@ For example, assume you configure the =main= font in
 #+END_SRC
 
 If Emacs detects characters belonging to the ~emoji~ character set, it
-will include the following fallback definition for the =main= font[fn:50]:
+will include the following fallback definition for the =main= font[fn:51]:
 
 #+BEGIN_SRC latex
 \directlua{
@@ -15311,7 +15335,7 @@ script for Hebrew script in mono-spaced passages (=:variant
 #+END_SRC
 
 Each entry in the property list associates a language(for example,
-="he"= for Hebrew, ="en"= for English, etc.[fn:51]) to a list
+="he"= for Hebrew, ="en"= for English, etc.[fn:52]) to a list
 of properties.
 
 The properties you can define are:
@@ -19357,7 +19381,7 @@ block, collects the results, and inserts them in the buffer.
 
 #+cindex: @samp{CALL}, keyword
 #+vindex: org-babel-inline-result-wrap
-By calling a named code block[fn:52] from an Org mode buffer or
+By calling a named code block[fn:53] from an Org mode buffer or
 a table.  Org can call the named code blocks from the current Org mode
 buffer or from the "Library of Babel" (see [[*Library of Babel]]).
 
@@ -19565,7 +19589,7 @@ they are mutually exclusive.
 
 - =value= ::
 
-  Default for most Babel libraries[fn:52].  Functional mode.  Org
+  Default for most Babel libraries[fn:53].  Functional mode.  Org
   gets the value by wrapping the code in a function definition in the
   language of the source block.  That is why when using =:results
   value=, code should execute like a function and return a value.  For
@@ -20428,7 +20452,7 @@ the second code block is expanded as
 #+end_example
 
 Note that noweb expansion does not automatically carry over =:var=
-header arguments[fn:53].
+header arguments[fn:54].
 
 You may also include the contents of multiple blocks sharing a common
 =noweb-ref= header argument, which can be set at the file, subtree,
@@ -20970,7 +20994,7 @@ in the desired amount with hard spaces and hiding leading stars.
 To display the buffer in the indented view, activate Org Indent minor
 mode, using {{{kbd(M-x org-indent-mode)}}}.  Text lines that are not
 headlines are prefixed with virtual spaces to vertically align with
-the headline text[fn:54].
+the headline text[fn:55].
 
 #+vindex: org-indent-indentation-per-level
 To make more horizontal space, the headlines are shifted by two
@@ -20998,7 +21022,7 @@ use =STARTUP= keyword as follows:
 
 It is possible to use hard spaces to achieve the indentation instead,
 if the bare ASCII file should have the indented look also outside
-Emacs[fn:55].  With Org's support, you have to indent all lines to
+Emacs[fn:56].  With Org's support, you have to indent all lines to
 line up with the outline headers.  You would use these settings[fn::
 ~org-adapt-indentation~ can also be set to ='headline-data=, in which
 case only data lines below the headline will be indented.]:
@@ -22165,7 +22189,7 @@ Tags]]) only for those set in these variables.
 
 #+vindex: org-mobile-directory
 The mobile application needs access to a file directory on
-a server[fn:56] to interact with Emacs.  Pass its location through
+a server[fn:57] to interact with Emacs.  Pass its location through
 the ~org-mobile-directory~ variable.  If you can mount that directory
 locally just set the variable to point to that directory:
 
@@ -22209,7 +22233,7 @@ Symbolic links in ~org-directory~ need to have the same name as their
 targets.].
 
 Push creates a special Org file =agendas.org= with custom agenda views
-defined by the user[fn:57].
+defined by the user[fn:58].
 
 Finally, Org writes the file =index.org=, containing links to other
 files.  The mobile application reads this file first from the server
@@ -22684,7 +22708,7 @@ of these strategies:
 To wrap a source table in LaTeX, use the =comment= environment
 provided by =comment.sty=[fn:: https://www.ctan.org/pkg/comment].  To
 activate it, put ~\usepackage{comment}~ in the document header.
-Orgtbl mode inserts a radio table skeleton[fn:58] with the command
+Orgtbl mode inserts a radio table skeleton[fn:59] with the command
 {{{kbd(M-x orgtbl-insert-radio-table)}}}, which prompts for a table
 name.  For example, if =salesfigures= is the name, the template
 inserts:
@@ -22704,7 +22728,7 @@ The line =#+ORGTBL: SEND= tells Orgtbl mode to use the function
 ~orgtbl-to-latex~ to convert the table to LaTeX format, then insert
 the table at the target (receive) location named =salesfigures=.  Now
 the table is ready for data entry.  It can even use spreadsheet
-features[fn:59]:
+features[fn:60]:
 
 #+begin_example
 % BEGIN RECEIVE ORGTBL salesfigures
@@ -24129,22 +24153,27 @@ meanings.  See [[https://docs.mathjax.org/en/latest/input/tex/html.html#tex-and-
 for different files.  However, "smart" LaTeX compilation systems, such
 as latexmk, can select the correct bibliography compiler.
 
-[fn:49] Consult [[info:emacs#Directory Variables][Directory Variables]]
+[fn:49] For example, if you use emojis in your document or intersperse
+words or short expressions in Greek, you will need to configure the
+fonts you use in the PDF export, even if the main document is intended
+for an American English context.
+
+[fn:50] Consult [[info:emacs#Directory Variables][Directory Variables]]
 to learn to define and use directory local variables.
 
-[fn:50] Any font in ~org-latex-fontspec-config~ which includes a
+[fn:51] Any font in ~org-latex-fontspec-config~ which includes a
 fallback for the =emoji= character set will produce equivalent code
 inside the =\directlua{}= code block.
 
-[fn:51] The language name can be the language as written out in the
+[fn:52] The language name can be the language as written out in the
 font declaration or the language identifier used in
 ~org-latex-languages-alist~.
 
-[fn:52] Actually, the constructs =call_<name>()= and =src_<lang>{}=
+[fn:53] Actually, the constructs =call_<name>()= and =src_<lang>{}=
 are not evaluated when they appear in a keyword (see [[*Summary of
 In-Buffer Settings]]).
 
-[fn:53] In the following example, attempting to evaluate
+[fn:54] In the following example, attempting to evaluate
 the second code block will give an error, because the variables
 defined in the first code block will not be defined in the second
 block.
@@ -24172,29 +24201,29 @@ values.
 ,#+END_SRC
 #+end_example
 
-[fn:54] Org Indent mode also sets ~wrap-prefix~ correctly for
+[fn:55] Org Indent mode also sets ~wrap-prefix~ correctly for
 indenting and wrapping long lines of headlines or text.  This minor
 mode also handles Visual Line mode and directly applied settings
 through ~word-wrap~.
 
-[fn:55] This works, but requires extra effort.  Org Indent mode is
+[fn:56] This works, but requires extra effort.  Org Indent mode is
 more convenient for most applications.
 
-[fn:56] For a server to host files, consider using a WebDAV server,
+[fn:57] For a server to host files, consider using a WebDAV server,
 such as [[https://nextcloud.com][Nextcloud]].  Additional help is at this [[https://orgmode.org/worg/org-faq.html#mobileorg_webdav][FAQ entry]].
 
-[fn:57] While creating the agendas, Org mode forces =ID= properties
+[fn:58] While creating the agendas, Org mode forces =ID= properties
 on all referenced entries, so that these entries can be uniquely
 identified if Org Mobile flags them for further action.  To avoid
 setting properties configure the variable
 ~org-mobile-force-id-on-agenda-items~ to ~nil~.  Org mode then relies
 on outline paths, assuming they are unique.
 
-[fn:58] By default this works only for LaTeX, HTML, and Texinfo.
+[fn:59] By default this works only for LaTeX, HTML, and Texinfo.
 Configure the variable ~orgtbl-radio-table-templates~ to install
 templates for other modes.
 
-[fn:59] If the =TBLFM= keyword contains an odd number of dollar
+[fn:60] If the =TBLFM= keyword contains an odd number of dollar
 characters, this may cause problems with Font Lock in LaTeX mode.  As
 shown in the example you can fix this by adding an extra line inside
 the =comment= environment that is used to balance the dollar
